src/test/deca/extension/context/invalid/multiplication_between_two_arrays.deca
// Description:
// 	  Array's Multiplication between two arrays with compatible dimensions
// Resultats:
// 	  INCOMPATIBLE_TYPE_OPERATOR: Type int\[\]\[\] is incompatible with type int\[\]\[\] for the operator \*
//    line 16
// Historique:
// 	  cree le /01/2023

{
    int[2][3] A = {{1, 2, 3}, {4, 5, 6}};
    int[3][1] B = {{1}, {2}, {3}};
    int[2][1] C;
    float[4] L1 = {3.0, 2.0, 6.0, 3.0};
    float[4] L2 = {1.0, 2.0, 0.0, 7.0};
    float res;
    C = A * B;
    res = L1 * L2;
}
